collapsable menus, added resizing, atttacked amplitude to radiu and notelength to speed, also fixed bug in envelope

--- a/src/SynthBoard.css
+++ b/src/SynthBoard.css
@@ -10,9 +10,23 @@
   position: fixed;
   width: 150px;
   border: 2px solid blueviolet;
+  border-radius: 5px;
   padding: 5px;
   text-align: center;
   z-index: 20;
+}
+
+.menu-header {
+  margin: 3px 0px 3px 0px;
+  font-size: 20px;
+}
+
+.menu-content {
+  display: none;
+}
+
+.menu:hover .menu-content {
+  display: block;
 }
 
 #adsr-menu {
@@ -23,6 +37,11 @@
 #flower-menu {
   top: 0;
   left: 170px;
+}
+
+#params-menu {
+  top: 0;
+  left: 340px;
 }
 
 #synth-canvas {
